--- a/config/locales/fr-FR.yml
+++ b/config/locales/fr-FR.yml
@@ -883,6 +883,7 @@ fr-FR:
         informations: 'Informations'
         general: 'Utilisateurs et rôles'
         help: 'Aide'
+        listings: 'Extractions de données'
         management: 'Gestion commerciale (ventes, achats et stocks)'
         modules: 'Modules'
         nb_entities: 
@@ -902,11 +903,12 @@ fr-FR:
         relations: 'Gestion des relations clients/fournisseurs'
         resources: 'Gestion des ressources humaines'
         restore: 'Sauvegardes'
+        tools: 'Outils'
       restore:
         backup: Effectuer une copie de sauvegarde
         download: Sélectionner le fichier de sauvegarde à télécharger
         import_backup: Import de fichier de sauvegarde
-        title: Recharger les données depuis une sauvegarde
+        title: Créer et recharger des sauvegardes
         your_new_code_is: 'Votre nouveau code société est : {{value}}'
       _rights_form:
         accountancy_rights: Droits module Comptabilité
